--- a/LawAlert/Views/Law/All.cshtml
+++ b/LawAlert/Views/Law/All.cshtml
@@ -1,4 +1,5 @@
-﻿@model AllLawsQueryModel
+﻿@using LawAlert.Core.Models.Law
+@model AllLawsQueryModel
 <!-- Page Header Start -->
 <div class="container-fluid bg-page-header" style="margin-bottom: 90px;">
     <div class="container">
@@ -7,7 +8,7 @@
             <div class="d-inline-flex text-white">
                 <p class="m-0 text-uppercase"><a class="text-white" href="">Home</a></p>
                 <i class="fa fa-angle-double-right pt-1 px-3"></i>
-                <p class="m-0 text-uppercase">Practice</p>
+                <p class="m-0 text-uppercase">Laws</p>
             </div>
         </div>
     </div>
@@ -17,47 +18,32 @@
 <div class="container-fluid py-5">
     <div class="container py-5">
         <div class="row">
-            <div class="col-lg-9 pt-5 pt-lg-0">
-                <div class="bg-primary rounded" style="height: 200px;"></div>
-                <div class="owl-carousel service-carousel position-relative" style="margin-top: -100px; padding: 0 30px;">
-                    <form style="margin: 50px">
-                        <div class="row">
-                            <div class="form-group col col-md-3">
-                                <div class="form-group">
-                                    <label asp-for="Interest">Interest</label>
-                                    <select asp-for="Interest" class="form-control">
-                                        <option value="All">All</option>
-                                        @foreach (var type in Model.RoomTypes)
-                                        {
-                                            <option value="@type.Type">@type.Type</option>
-                                        }
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="form-group col col-md-3">
-                                <div class="form-floating" style="margin-left: 10px">
-                                    <input type="checkbox" asp-for="Availability" style="margin-top: 20px; height: 40px; width: 40px" />
-                                    <label style="margin-left: 40px" asp-for="Availability">Only Available Rooms</label>
-                                </div>
-                            </div>
-
-                            <div class="form-group col col-md-3">
-                                <div class="form-group">
-                                    <label asp-for="RoomsPerPage">Rooms per Page</label>
-                                    <select asp-for="RoomsPerPage" class="form-control">
-                                        <option value="10">10</option>
-                                        <option value="25">25</option>
-                                        <option value="50">50</option>
-                                    </select>
-                                </div>
-                            </div>
-
-                            <div class="text-center" style="margin-top: 50px">
-                                <input type="submit" value="Search" class="btn btn-primary" />
+            <div class="col pt-5 pt-lg-0">
+                <form style="margin: 50px">
+                    <div class="row">
+                        <div class="form-group col-md-3">
+                            <label asp-for="SearchText"></label>
+                            <input type="text" asp-for="SearchText" class="form-control" placeholder="...">
+                        </div>
+                        <div class="form-group col col-md-3">
+                            <div class="form-group">
+                                <label asp-for="Interest">Interest</label>
+                                <select asp-for="Interest" class="form-control">
+                                    <option value="All">All</option>
+                                    @foreach (var interest in Model.Interests)
+                                    {
+                                        <option value="@interest.Type">@interest.Type</option>
+                                    }
+                                </select>
                             </div>
                         </div>
-                    </form>
-
+                        <div class="text-center" style="margin-top: 50px">
+                            <input type="submit" value="Search" class="btn btn-primary" />
+                        </div>
+                    </div>
+                </form>
+                <div class="bg-primary rounded" style="height: 200px;"></div>
+                <div class="owl-carousel service-carousel position-relative" style="margin-top: -100px; padding: 0 30px;">
                     @{
                         var previousPage = Model.CurrentPage - 1;
                         if (previousPage < 1)
@@ -65,8 +51,8 @@
                             previousPage = 1;
                         }
 
-                        var maxPage = Math.Ceiling((double)Model.TotalRoomsCount /
-                        Model.RoomsPerPage);
+                        var maxPage = Math.Ceiling((double)Model.TotalLawsCount /
+                        Model.LawsPerPage);
                     }
 
                     <div class="row md-4">
@@ -75,14 +61,13 @@
                                asp-controller="Room"
                                asp-action="All"
                                asp-route-currentPage="@previousPage"
-                               asp-route-Capacity="@((int)Model.Capacity)"
-                               asp-route-Type="@Model.Type"
-                               asp-route-Availability="@Model.Availability"><<</a>
+                               asp-route-SearchText="@Model.SearchText"
+                               asp-route-Type="@Model.Interest"><<</a>
                         </div>
 
                         @{
                             var shouldButtonBeDisabled = Model.CurrentPage == maxPage ||
-            !Model.Rooms.Any();
+            !Model.Laws.Any();
                         }
 
                         <div class="col-md-6 d-grid gap-2 d-mb-flex justify-content-md-end">
@@ -91,63 +76,124 @@
                                asp-controller="Room"
                                asp-action="All"
                                asp-route-currentPage="@(Model.CurrentPage + 1)"
-                               asp-route-Capacity="@((int)Model.Capacity)"
-                               asp-route-Type="@Model.Type"
-                               asp-route-Availability="@Model.Availability">>></a>
+                               asp-route-SearchText="@Model.SearchText"
+                               asp-route-Type="@Model.Interest">>></a>
                         </div>
                     </div>
 
-                    <div class="row g-4">
-                        @if (!Model.Rooms.Any())
-                        {
-                            <h2 class="text-center">No rooms found by the given criteria!</h2>
-                        }
+                    @if (!Model.Laws.Any())
+                    {
+                        <h2 class="text-center">No laws found by the given criteria!</h2>
+                    }
 
-                        @if (@Model.Rooms == null)
+                    @if (@Model.Laws == null)
+                    {
+                        <h3>Coming soon...</h3>
+                    }
+                    else
+                    {
+                        @foreach (var law in @Model.Laws)
                         {
-                            <div class="col-lg-12 col-12 text-center mb-4">
-                                <h3>Coming soon...</h3>
-                            </div>
+                            <partial name="_LawPartial" model="law" />
                         }
-                        else
-                        {
-                            @foreach (var room in @Model.Rooms)
-                            {
-                                <partial name="_RoomPartial" model="room" />
-                            }
-                        }
-                    </div>
-                    <div class="d-flex flex-column align-items-center text-center bg-white rounded pt-4">
-                        <div class="icon-box bg-secondary text-primary mt-2 mb-4">
-                            <i class="fa fa-2x fa-landmark"></i>
-                        </div>
-                        <h5 class="mb-4 px-4">Civil Law</h5>
-                        <p class="m-0">Takim stet justo elitr sea eirmod vero ipsum. Sed Stet clita sit duo dolor stet at at. Tempor dolor sit ipsum</p>
-                    </div>
-                    <div class="d-flex flex-column align-items-center text-center bg-white rounded pt-4">
-                        <div class="icon-box bg-secondary text-primary mt-2 mb-4">
-                            <i class="fa fa-2x fa-users"></i>
-                        </div>
-                        <h5 class="mb-4 px-4">Family Law</h5>
-                        <p class="m-0">Takim stet justo elitr sea eirmod vero ipsum. Sed Stet clita sit duo dolor stet at at. Tempor dolor sit ipsum</p>
-                    </div>
-                    <div class="d-flex flex-column align-items-center text-center bg-white rounded pt-4">
-                        <div class="icon-box bg-secondary text-primary mt-2 mb-4">
-                            <i class="fa fa-2x fa-hand-holding-usd"></i>
-                        </div>
-                        <h5 class="mb-4 px-4">Business Law</h5>
-                        <p class="m-0">Takim stet justo elitr sea eirmod vero ipsum. Sed Stet clita sit duo dolor stet at at. Tempor dolor sit ipsum</p>
-                    </div>
-                    <div class="d-flex flex-column align-items-center text-center bg-white rounded pt-4">
-                        <div class="icon-box bg-secondary text-primary mt-2 mb-4">
-                            <i class="fa fa-2x fa-gavel"></i>
-                        </div>
-                        <h5 class="mb-4 px-4">Criminal Law</h5>
-                        <p class="m-0">Takim stet justo elitr sea eirmod vero ipsum. Sed Stet clita sit duo dolor stet at at. Tempor dolor sit ipsum</p>
-                    </div>
+                    }
                 </div>
             </div>
         </div>
     </div>
 </div>
+<!-- Services End -->
+@*<!-- Services Start -->
+    <div class="container-fluid py-5">
+    <div class="container py-5">
+    <div class="row">
+    <div class="col-lg-9 pt-5 pt-lg-0">
+    <div class="bg-primary rounded" style="height: 200px;"></div>
+    <div class="owl-carousel service-carousel position-relative" style="margin-top: -100px; padding: 0 30px;">
+    <form style="margin: 50px">
+    <div class="row">
+    <div class="form-group col-md-3">
+    <label asp-for="SearchText"></label>
+    <input type="text" asp-for="SearchText" class="form-control" placeholder="...">
+    </div>
+    <div class="form-group col col-md-3">
+    <div class="form-group">
+    <label asp-for="Interest">Interest</label>
+    <select asp-for="Interest" class="form-control">
+    <option value="All">All</option>
+    @foreach (var interest in Model.Interests)
+    {
+    <option value="@interest.Type">@interest.Type</option>
+    }
+    </select>
+    </div>
+    </div>
+    <div class="text-center" style="margin-top: 50px">
+    <input type="submit" value="Search" class="btn btn-primary" />
+    </div>
+    </div>
+    </form>
+
+    @{
+    var previousPage = Model.CurrentPage - 1;
+    if (previousPage < 1)
+    {
+    previousPage = 1;
+    }
+
+    var maxPage = Math.Ceiling((double)Model.TotalLawsCount /
+    Model.LawsPerPage);
+    }
+
+    <div class="row md-4">
+    <div class="col-md-6 d-grid gap-2 d-mb-flex justify-content-md-start">
+    <a class="btn btn-primary @(Model.CurrentPage == 1 ? "disabled" : string.Empty)"
+    asp-controller="Room"
+    asp-action="All"
+    asp-route-currentPage="@previousPage"
+    asp-route-SearchText="@Model.SearchText"
+    asp-route-Type="@Model.Interest"><<</a>
+    </div>
+
+    @{
+    var shouldButtonBeDisabled = Model.CurrentPage == maxPage ||
+    !Model.Laws.Any();
+    }
+
+    <div class="col-md-6 d-grid gap-2 d-mb-flex justify-content-md-end">
+    <a class="btn btn-primary
+    @(shouldButtonBeDisabled ? "disabled" : string.Empty)"
+    asp-controller="Room"
+    asp-action="All"
+    asp-route-currentPage="@(Model.CurrentPage + 1)"
+    asp-route-SearchText="@Model.SearchText"
+    asp-route-Type="@Model.Interest">>></a>
+    </div>
+    </div>
+
+    <div class="row g-4">
+    @if (!Model.Laws.Any())
+    {
+    <h2 class="text-center">No laws found by the given criteria!</h2>
+    }
+
+    @if (@Model.Laws == null)
+    {
+    <div class="col-lg-12 col-12 text-center mb-4">
+    <h3>Coming soon...</h3>
+    </div>
+    }
+    else
+    {
+    @foreach (var law in @Model.Laws)
+    {
+    <partial name="_LawPartial" model="law" />
+    }
+    }
+    </div>
+    </div>////
+    </div>
+    </div>
+    </div>
+    </div>*@
 <!-- Services End -->
