--- a/LawAlert/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/LawAlert/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -134,7 +134,6 @@
                 <a asp-area="Admin" asp-controller="Home" asp-action="Index" class="navbar-brand">
                     <h1 class="m-0 mt-n2 display-4 text-primary text-uppercase">Law Alert</h1>
                 </a>
-                <p>Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed kasd et</p>
                 <div class="d-flex justify-content-start mt-4">
                     <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-lg btn-outline-light btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -146,9 +145,9 @@
                 <h4 class="font-weight-semi-bold text-primary mb-4">Popular Links</h4>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" asp-area="Admin" asp-controller="Home" asp-action="Index"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                    <a class="text-white mb-2" asp-controller="Home" asp-action="About"><i class="fa fa-angle-right mr-2"></i>About</a>
-                    <a class="text-white mb-2" asp-controller="Law" asp-action="All"><i class="fa fa-angle-right mr-2"></i>Laws</a>
-                    <a class="text-white" asp-controller="Home" asp-action="Contact"><i class="fa fa-angle-right mr-2"></i>Contact</a>
+                    <a class="text-white mb-2" asp-area="" asp-controller="Home" asp-action="About"><i class="fa fa-angle-right mr-2"></i>About</a>
+                    <a class="text-white mb-2" asp-area="" asp-controller="Law" asp-action="All"><i class="fa fa-angle-right mr-2"></i>Laws</a>
+                    <a class="text-white"  asp-area="" asp-controller="Home" asp-action="Contact"><i class="fa fa-angle-right mr-2"></i>Contact</a>
                 </div>
             </div>
 @*            <div class="col-lg-3 col-md-6 mb-5">
@@ -163,7 +162,6 @@
             </div>*@
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="font-weight-semi-bold text-primary mb-4">Newsletter</h4>
-                <p>Rebum labore lorem dolores kasd est, et ipsum amet et at kasd, ipsum sea tempor magna tempor. Accu kasd sed ea duo ipsum.</p>
                 <div class="w-100">
                     <div class="input-group">
                         <input type="text" class="form-control border-0" style="padding: 25px;" placeholder="Your Email">
