--- a/LawAlert/Areas/Admin/Views/_ViewStart.cshtml
+++ b/LawAlert/Areas/Admin/Views/_ViewStart.cshtml
@@ -1,3 +1,10 @@
 ﻿@{
-    Layout = "_AdminLayout";
+    if (this.User.IsInRole("Admin"))
+    {
+        Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
+    }
+    else
+    {
+        Layout = "_Layout";
+    }
 }
